# db2spread

./: .gitignore  README.md  db2spread.py  pyproject.toml
